--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     <!-- header -->
     <header class="header-page">
       <!-- top line nav -->
-      <div class="container header-page-container">
+      <!-- <div class="container header-page-container">
         <nav class="nav-page">
           <a class="nav-logo link" href="./index.html"><span class="color-web">WEB</span>STUDIO</a>
           <ul class="nav-list">
             <li><a class="nav-studio link carrent" href="./index.html">Studio</a></li>
             <li><a class="nav-portfolio link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-contacts link" href="#">Contacts</a></li>
-          </ul>
+          </ul> -->
         </nav>
         <!-- top line contacts -->
-        <ul class="contacts-list">
+        <!-- <ul class="contacts-list">
           <li
             ><a class="header-mailto link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -45,16 +45,16 @@
           <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- main -->
     <main>
       <!-- hero -->
-      <section class="section-hero">
+      <!-- <section class="section-hero">
         <div class="container">
           <h1 class="hero-title"> Effective Solutions for Your Business </h1>
           <button class="btn hero-btn" data-modal-open type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
       <!-- feature -->
       <section class="section section-feature">
         <h2 class="visually-hidden">feature</h2>
@@ -112,7 +112,7 @@
         </div>
       </section>
       <!-- what are we doing -->
-      <section class="section section-what">
+      <!-- <section class="section section-what">
         <div class="container">
           <h2 class="what-title">What are we doing</h2>
           <ul class="card-set">
@@ -133,9 +133,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- our team -->
-      <section class="section team">
+      <!-- <section class="section team">
         <div class="container">
           <h2 class="our-title">Our Team</h2>
           <ul class="card-set">
@@ -337,9 +337,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- customers -->
-      <section class="section customers">
+      <!-- <section class="section customers">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-set">
@@ -376,9 +376,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container flex-footer">
         <div>
           <a class="footer-logo link" href="./index.html"
@@ -389,8 +389,8 @@
             growth solutions.
           </p>
         </div>
-        <!-- social footer -->
-        <div class="social-media">
+        <!--social footer -->
+       <!--<div class="social-media">
           <p class="social-text">Social Media</p>
           <ul class="social-list-footer">
             <li
@@ -434,9 +434,9 @@
                   <use href="./images/icons.svg#icon-linkedin"></use></svg></a>
             </li>
           </ul>
-        </div>
+        </div> -->
         <!-- form footer -->
-        <form class="form-footer">
+        <!-- <form class="form-footer">
           <div
             ><label class="email-form-label">
               Subscribe <input class="email-form-input" name="email" type="email" placeholder="E-mail" /></label
@@ -451,7 +451,7 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
     <!-- modal form -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
