--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <li><a class="nav-studio link carrent" href="./index.html">Studio</a></li>
             <li><a class="nav-portfolio link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-contacts link" href="#">Contacts</a></li>
-          </ul> -->
-        </nav>
+          </ul>
+        </nav> -->
         <!-- top line contacts -->
         <!-- <ul class="contacts-list">
           <li
@@ -56,7 +56,7 @@
         </div>
       </section> -->
       <!-- feature -->
-      <section class="section section-feature">
+      <section class="section">
         <h2 class="visually-hidden">feature</h2>
         <div class="container">
           <ul class="card-set">
