--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <!-- body -->
-
   <body>
     <!-- header -->
     <header class="header-page">
       <!-- top line nav -->
-      <!-- <div class="container header-page-container">
+      <div class="container header-page-container">
         <nav class="nav-page">
           <a class="nav-logo link" href="./index.html"><span class="color-web">WEB</span>STUDIO</a>
           <ul class="nav-list">
@@ -34,9 +33,9 @@
             <li><a class="nav-portfolio link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-contacts link" href="#">Contacts</a></li>
           </ul>
-        </nav> -->
+        </nav>
         <!-- top line contacts -->
-        <!-- <ul class="contacts-list">
+        <ul class="contacts-list">
           <li
             ><a class="header-mailto link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -44,17 +43,34 @@
           >
           <li><a class="header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
+         <!-- mobile button -->
+        <button
+        class="menu-burger js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+      <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g clip-path="url(#clip0_297053_2156)">
+        <path d="M1.34766 20.0431H30.8861M1.34766 10.7354H30.8861M1.34766 1.42773H30.8861" stroke="#2E2F42" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+        </g>
+        <defs>
+        <clipPath id="clip0_297053_2156">
+        <rect width="32" height="22" fill="white"/>
+        </clipPath>
+        </defs>
+        </svg>
+            </button>
       </div>
-    </header> -->
+    </header>
     <!-- main -->
     <main>
       <!-- hero -->
-      <!-- <section class="section-hero">
+      <section class="section-hero">
         <div class="container">
           <h1 class="hero-title"> Effective Solutions for Your Business </h1>
           <button class="btn hero-btn" data-modal-open type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
       <!-- feature -->
       <section class="section">
         <h2 class="visually-hidden">feature</h2>
@@ -112,7 +128,7 @@
         </div>
       </section>
       <!-- what are we doing -->
-      <!-- <section class="section section-what">
+      <section class="section section-what">
         <div class="container">
           <h2 class="what-title">What are we doing</h2>
           <ul class="card-set">
@@ -133,9 +149,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- our team -->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="our-title">Our Team</h2>
           <ul class="card-set">
@@ -337,7 +353,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- customers -->
       <!-- <section class="section customers">
         <div class="container">
@@ -506,6 +522,79 @@
         </form>
       </div>
     </div>
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg width="8" height="8">
+          <use href="./images/icons.svg#icon-close-btn-modal"></use>
+        </svg>
+      </button>
+<!-- mobile nav -->
+      <ul class="mobile-nav-list">
+        <li><a class="mobile-nav-studio link" href="./index.html">Studio</a></li>
+        <li><a class="mobile-nav-portfolio link" href="./portfolio.html">Portfolio</a></li>
+        <li><a class="mobile-nav-contacts link" href="#">Contacts</a></li>
+      </ul>
+    </nav>
+    <!-- top line contacts -->
+    <ul class="mobile-contacts-list">
+      <li><a class="mobile-header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+      <li
+        ><a class="mobile-header-mailto link" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        ></li>
+          </ul>
+    <ul class="socials-mobile">
+      <li
+        ><a
+          class="mobile-social-link"
+          href="https://www.instagram.com/"
+          aria-label="Instagram"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><svg width="24" height="24">
+            <use href="./images/icons.svg#icon-instagram"></use></svg></a
+      ></li>
+      <li
+        ><a
+          class="mobile-social-link"
+          href="https://twitter.com/"
+          aria-label="twitter"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><svg width="24" height="24">
+            <use href="./images/icons.svg#icon-twitter"></use></svg></a
+      ></li>
+      <li
+        ><a
+          class="mobile-social-link"
+          href="https://www.facebook.com/"
+          aria-label="facebook"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><svg width="24" height="24">
+            <use href="./images/icons.svg#icon-facebook"></use></svg></a
+      ></li>
+      <li
+        ><a
+          class="mobile-social-link"
+          href="https://www.linkedin.com/"
+          aria-label="linkedin"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><svg width="24" height="24">
+            <use href="./images/icons.svg#icon-linkedin"></use></svg></a
+      ></li>
+    </ul>
+    </div>
+    <!--script  -->
+    <script
+    defer
+    src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"
+  ></script>
+  <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
