--- a/index.html
+++ b/index.html
@@ -355,36 +355,36 @@
         </div>
       </section>
       <!-- customers -->
-      <!-- <section class="section customers">
+      <section class="section">
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-set">
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo1"></use> </svg></a>
             </li>
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo2"></use> </svg></a>
             </li>
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo3"></use></svg></a>
             </li>
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo4"></use></svg></a>
             </li>
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo5"></use></svg></a>
             </li>
-            <li class="thumb-customers">
+            <li class="thumb-customers thumb-customers-item">
               <a class="customers-icon" href="#">
                 <svg width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo6"></use></svg></a>
@@ -392,7 +392,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!-- footer -->
     <!-- <footer class="footer">
       <div class="container flex-footer">
