adative pege 1 mobile done

--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@
       </section>
     </main>
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container flex-footer">
-        <div>
+        <div class="logo-footer">
           <a class="footer-logo link" href="./index.html"
             ><span class="color-web">WEB</span>STUDIO</a
           >
@@ -406,7 +406,7 @@
           </p>
         </div>
         <!--social footer -->
-       <!--<div class="social-media">
+       <div class="social-media social-footer">
           <p class="social-text">Social Media</p>
           <ul class="social-list-footer">
             <li
@@ -450,10 +450,10 @@
                   <use href="./images/icons.svg#icon-linkedin"></use></svg></a>
             </li>
           </ul>
-        </div> -->
+        </div>
         <!-- form footer -->
-        <!-- <form class="form-footer">
-          <div
+        <form class="form-footer">
+          <div class="footer-form"
             ><label class="email-form-label">
               Subscribe <input class="email-form-input" name="email" type="email" placeholder="E-mail" /></label
           ></div>
@@ -467,7 +467,7 @@
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
     <!-- modal form -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -535,7 +535,6 @@
         <li><a class="mobile-nav-portfolio link" href="./portfolio.html">Portfolio</a></li>
         <li><a class="mobile-nav-contacts link" href="#">Contacts</a></li>
       </ul>
-    </nav>
     <!-- top line contacts -->
     <ul class="mobile-contacts-list">
       <li><a class="mobile-header-tel link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
