--- a/index.html
+++ b/index.html
@@ -49,17 +49,10 @@
         aria-expanded="false"
         aria-controls="mobile-menu"
       >
-      <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0_297053_2156)">
-        <path d="M1.34766 20.0431H30.8861M1.34766 10.7354H30.8861M1.34766 1.42773H30.8861" stroke="#2E2F42" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-        </g>
-        <defs>
-        <clipPath id="clip0_297053_2156">
-        <rect width="32" height="22" fill="white"/>
-        </clipPath>
-        </defs>
-        </svg>
-            </button>
+      <svg width="32" height="22">
+        <use href="./images/icons.svg#mobile-menu"></use>
+      </svg>
+       </button>
       </div>
     </header>
     <!-- main -->
@@ -152,9 +145,9 @@
       </section>
       <!-- our team -->
       <section class="section team">
-        <div class="container">
+        <div class="container team-cont">
           <h2 class="our-title">Our Team</h2>
-          <ul class="card-set">
+          <ul class="card-set team">
             <li class="card card-set-item">
               <img src="./images/team-page1/team1.jpg" alt="Mark" width="264" height="260" />
               <div class="card-team">
