--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./images/team-page1/team-figma/img_desk@1x-2.webp 1x,./images/team-page1/team-figma/img_desk@2x-2.webp 2x" type="image/jpg">
                 <source media="(min-width: 768px)" srcset="./images/team-page1/team-figma/img_tab@1x-2.webp 1x,./images/team-page1/team-figma/img_tab@2x-2.webp 2x" type="image/jpg">
-                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-1.webp 1x" src="./images/team-page1/team-figma/img_mob@2x-1.webp 2x" type="image/jpg">
+                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-1.webp 1x,./images/team-page1/team-figma/img_mob@2x-1.webp 2x" type="image/jpg">
                 <img src="./images/team-page1/team-figma/img_mob@1x-1.webp" alt="Tom" width="264" height="260" loading="lazy" />
             </picture>
                 <div class="card-team">
@@ -254,7 +254,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./images/team-page1/team-figma/img_desk@1x-1.webp 1x,./images/team-page1/team-figma/img_desk@2x-1.webp 2x" type="image/jpg">
                 <source media="(min-width: 768px)" srcset="./images/team-page1/team-figma/img_tab@1x-1.webp 1x,./images/team-page1/team-figma/img_tab@2x-1.webp 2x" type="image/jpg">
-                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-2.webp 1x" src="./images/team-page1/team-figma/img_mob@2x-2.webp 2x" type="image/jpg">
+                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-2.webp 1x,./images/team-page1/team-figma/img_mob@2x-2.webp 2x" type="image/jpg">
                 <img src="./images/team-page1/team-figma/img_mob@1x-2.webp" alt="Camila" width="264" height="260" loading="lazy"  />
             </picture>
                 <div class="card-team">
@@ -308,7 +308,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="./images/team-page1/team-figma/img_desk@1x.webp 1x,./images/team-page1/team-figma/img_desk@2x.webp 2x" type="image/jpg">
                 <source media="(min-width: 768px)" srcset="./images/team-page1/team-figma/img_tab@1x.webp 1x,./images/team-page1/team-figma/img_tab@2x.webp 2x" type="image/jpg">
-                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-3.webp 1x" src="./images/team-page1/team-figma/img_mob@2x-3.webp 2x" type="image/jpg">
+                <source media="(max-width: 767px)" srcset="./images/team-page1/team-figma/img_mob@1x-3.webp 1x,./images/team-page1/team-figma/img_mob@2x-3.webp 2x" type="image/jpg">
                 <img src="./images/team-page1/team-figma/img_mob@1x-3.webp" alt="Daniel" width="264" height="260" loading="lazy" />
             </picture>
                 <div class="card-team">
