reload what img

--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
           <h2 class="what-title">What are we doing</h2>
           <ul class="card-set">
             <li class="card-set-item what-set-item">
-             <img srcset="./images/box-page1/box-figma/_desk@1x-3.webp 1x,./images/box-page1/box-figma/_desk@2x-3.webp 2x" src="./images/box-page1/box-figma/_desk@1x-3.webp" alt="computer" width="360" height="300" loading="lazy" />
-             </li>
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./images/box-page1/box-figma/_desk@1x-3.webp 1x,./images/box-page1/box-figma/_desk@2x-3.webp 2x" type="image/jpg">
+             <img  src="./images/box-page1/box-figma/_desk@1x-3.webp" alt="computer" width="360" height="300" loading="lazy" />
+            </picture>
+            </li>
             <li class="card-set-item what-set-item">
               <img srcset="./images/box-page1/box-figma/_desk@1x-2.webp 1x,./images/box-page1/box-figma/_desk@2x-2.webp 2x" src="./images/box-page1/box-figma/_desk@1x-2.webp" alt="watsapp" width="360" height="300" loading="lazy" />
             </li>
