--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <li class="card-set-item what-set-item">
               <picture>
               <source 
-                type="image/jpg"
+                type="image/webp"
                 media="(min-width: 1200)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
