--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
                 media="(min-width: 1200)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
+                <source 
+                type="image/webp"
+                media="(min-width: 768)"
+                srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
+                ./images/box-page1/box/_desk@2x-2.webp 2x"/> <source 
+                type="image/webp"
+                media="(min-width: 767)"
+                srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
+                ./images/box-page1/box/_desk@2x-2.webp 2x"/>
               <img
                 src="./images/box-page1/box/_desk@1x-2.webp"
                 alt="computer"
