--- a/index.html
+++ b/index.html
@@ -123,17 +123,18 @@
           <ul class="card-set">
             <li class="card-set-item what-set-item">
               <picture>
-              <source 
-                type="image/webp"
+                <source 
+                type="image/jpg"
                 media="(min-width: 1200)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
                 <source 
-                type="image/webp"
+                type="image/jpg"
                 media="(min-width: 768)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
-                ./images/box-page1/box/_desk@2x-2.webp 2x"/> <source 
-                type="image/webp"
+                ./images/box-page1/box/_desk@2x-2.webp 2x"/> 
+                <source 
+                type="image/jpg"
                 media="(min-width: 767)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
