--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
               <img
-                src="./images/box-page1/box/_desk@1x-2.webp"
+                src="./images/box-page1/box1.jpg"
                 alt="computer"
                 width="360"
                 height="300"
