--- a/index.html
+++ b/index.html
@@ -124,22 +124,37 @@
             <li class="card-set-item what-set-item">
               <picture>
                 <source 
-                type="image/jpg"
+                type="image/webp"
                 media="(min-width: 1200)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
                 <source 
                 type="image/jpg"
+                media="(min-width: 1200)"
+                srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
+                <source 
+                type="image/webp"
                 media="(min-width: 768)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/> 
                 <source 
                 type="image/jpg"
+                media="(min-width: 768)"
+                srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> 
+                <source 
+                type="image/webp"
                 media="(min-width: 767)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
+                <source 
+                type="image/jpg"
+                media="(min-width: 767)"
+                srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
               <img
-                src="./images/box-page1/box1.jpg"
+                src="./images/box-page1/box/_desk@1x-2.jpg"
                 alt="computer"
                 width="360"
                 height="300"
