--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Custom styles -->
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
-  <!-- body -->
+  <!-- body -->  
   <body>
     <!-- header -->
     <header class="header-page">
@@ -125,36 +125,36 @@
               <picture>
                 <source 
                 type="image/webp"
-                media="(min-width: 1200)"
+                media="(min-width: 1200px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
-                media="(min-width: 1200)"
+                media="(min-width: 1200px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> -->
                 <source 
                 type="image/webp"
-                media="(min-width: 768)"
+                media="(min-width: 768px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/> 
-                <source 
+                <!-- <source 
                 type="image/jpg"
-                media="(min-width: 768)"
+                media="(min-width: 768px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> 
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>  -->
                 <source 
                 type="image/webp"
-                media="(min-width: 767)"
+                media="(min-width: 767px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
-                media="(min-width: 767)"
+                media="(min-width: 767px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> -->
               <img
-                src="./images/box-page1/box/_desk@1x-2.jpg"
+                src="./images/box-page1/box/_desk@1x-2.webp"
                 alt="computer"
                 width="360"
                 height="300"
