--- a/index.html
+++ b/index.html
@@ -128,33 +128,33 @@
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
-                <!-- <source 
+                <source 
                 type="image/jpg"
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> -->
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
                 <source 
                 type="image/webp"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/> 
-                <!-- <source 
+                <source 
                 type="image/jpg"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>  -->
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> 
                 <source 
                 type="image/webp"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/box/_desk@1x-2.webp 1x,
                 ./images/box-page1/box/_desk@2x-2.webp 2x"/>
-                <!-- <source 
+                <source 
                 type="image/jpg"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/box/_desk@1x-2.jpg 1x,
-                ./images/box-page1/box/_desk@2x-2.jpg 2x"/> -->
+                ./images/box-page1/box/_desk@2x-2.jpg 2x"/>
               <img
-                src="./images/box-page1/box/_desk@1x-2.webp"
+                src="./images/box-page1/box/_desk@1x-2.jpg"
                 alt="computer"
                 width="360"
                 height="300"
