--- a/index.html
+++ b/index.html
@@ -163,19 +163,80 @@
             </picture>
             </li>
             <li class="card-set-item what-set-item">
+              <picture>
+                <source 
+                type="image/webp"
+                media="(min-width: 1200px)"
+                srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
+                ./images/box-page1/webp/box_desk@2x-1.webp 2x"/>
+                <source 
+                type="image/jpg"
+                media="(min-width: 1200px)"
+                srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>
+                <source 
+                type="image/webp"
+                media="(min-width: 768px)"
+                srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
+                ./images/box-page1/webp/box_desk@2x-1.webp 2x"/> 
+                <source 
+                type="image/jpg"
+                media="(min-width: 768px)"
+                srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> 
+                <source 
+                type="image/webp"
+                media="(min-width: 767px)"
+                srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
+                ./images/box-page1/webp/box_desk@2x-1.webp 2x"/>
+                <source 
+                type="image/jpg"
+                media="(min-width: 767px)"
+               srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>
               <img
-                srcset="./images/box-page1/box/_desk@2x-1.webp 2x"
-                src="./images/box-page1/box/_desk@1x-1.webp"
+                src="./images/box-page1/webp/box_desk@1x-1.jpg"
                 alt="watsapp"
                 width="360"
                 height="300"
                 loading="lazy"
               />
+              </picture>
             </li>
             <li class="card-set-item what-set-item">
+              <picture>
+                <source 
+                type="image/webp"
+                media="(min-width: 1200px)"
+                srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
+                ./images/box-page1/webp/box_desk@2x.webp 2x"/>
+                <source 
+                type="image/jpg"
+                media="(min-width: 1200px)"
+                srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/>
+                <source 
+                type="image/webp"
+                media="(min-width: 768px)"
+                srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
+                ./images/box-page1/webp/box_desk@2x.webp 2x"/> 
+                <source 
+                type="image/jpg"
+                media="(min-width: 768px)"
+                srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/> 
+                <source 
+                type="image/webp"
+                 srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
+                ./images/box-page1/webp/box_desk@2x.webp 2x"/>
+                <source 
+                type="image/jpg"
+                media="(min-width: 767px)"
+                srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/>
+                </picture>
               <img
-                srcset="./images/box-page1/box/_desk@2x.webp 2x"
-                src="./images/box-page1/box/_desk@1x.webp"
+                src="./images/box-page1/webp/box_desk@1x.jpg"
                 alt="phone"
                 width="360"
                 height="300"
