--- a/index.html
+++ b/index.html
@@ -128,31 +128,31 @@
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-2.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/>
+                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/> -->
                 <source 
                 type="image/webp"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-2.webp 2x"/> 
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/> 
+                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/>  -->
                 <source 
                 type="image/webp"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-2.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/webp/box_desk@1x-2.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/>
+                ./images/box-page1/webp/box_desk@2x-2.jpg 2x"/> -->
               <img
                 src="./images/box-page1/webp/box_desk@1x-2.jpg"
                 alt="computer"
@@ -169,31 +169,31 @@
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-1.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> -->
                 <source 
                 type="image/webp"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-1.webp 2x"/> 
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> 
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>  -->
                 <source 
                 type="image/webp"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-1.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 767px)"
                srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> -->
               <img
                 src="./images/box-page1/webp/box_desk@1x-1.jpg"
                 alt="watsapp"
@@ -210,38 +210,38 @@
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
                 ./images/box-page1/webp/box_desk@2x.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x.jpg 2x"/>
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/> -->
                 <source 
                 type="image/webp"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
                 ./images/box-page1/webp/box_desk@2x.webp 2x"/> 
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x.jpg 2x"/> 
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/>  -->
                 <source 
                 type="image/webp"
                  srcset="./images/box-page1/webp/box_desk@1x.webp 1x,
                 ./images/box-page1/webp/box_desk@2x.webp 2x"/>
-                <source 
+                <!-- <source 
                 type="image/jpg"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/webp/box_desk@1x.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x.jpg 2x"/>
-                </picture>
-              <img
+                ./images/box-page1/webp/box_desk@2x.jpg 2x"/> -->
+                <img
                 src="./images/box-page1/webp/box_desk@1x.jpg"
                 alt="phone"
                 width="360"
                 height="300"
                 loading="lazy"
               />
+              </picture>
             </li>
           </ul>
         </div>
