--- a/index.html
+++ b/index.html
@@ -173,23 +173,23 @@
                 type="image/jpg"
                 media="(min-width: 1200px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> -->
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>
                 <source 
                 type="image/webp"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-1.webp 2x"/> 
-                <!-- <source 
+                <source 
                 type="image/jpg"
                 media="(min-width: 768px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
-                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/>  -->
+                ./images/box-page1/webp/box_desk@2x-1.jpg 2x"/> 
                 <source 
                 type="image/webp"
                 media="(min-width: 767px)"
                 srcset="./images/box-page1/webp/box_desk@1x-1.webp 1x,
                 ./images/box-page1/webp/box_desk@2x-1.webp 2x"/>
-                <!-- <source 
+                <source 
                 type="image/jpg"
                 media="(min-width: 767px)"
                srcset="./images/box-page1/webp/box_desk@1x-1.jpg 1x,
