--- a/index.html
+++ b/index.html
@@ -20,17 +20,9 @@
     <!-- Custom styles -->
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
- /**
-   |============================
-   | body
-   |============================
- */
+  <!-- body -->  
   <body>
-    /**
-      |============================
-      | header 
-      |============================
-    */
+    <!-- header -->
     <header class="header-page">
       <!-- top line nav -->
       <div class="container header-page-container">
@@ -59,28 +51,16 @@
         </button>
       </div>
     </header>
-  /**
-    |============================
-    | main
-    |============================
-  */
+    <!-- main -->
     <main>
-      /**
-        |============================
-        | hero
-        |============================
-      */
+      <!-- hero -->
       <section class="section-hero">
         <div class="container">
           <h1 class="hero-title"> Effective Solutions for Your Business </h1>
           <button class="btn hero-btn" data-modal-open type="button">Order Service</button>
         </div>
       </section>
-      /**
-        |============================
-        | feature
-        |============================
-      */
+      <!-- feature -->
       <section class="section">
         <h2 class="visually-hidden">feature</h2>
         <div class="container">
@@ -136,11 +116,7 @@
           </ul>
         </div>
       </section>
-     /**
-       |============================
-       | what are we doing
-       |============================
-     */
+      <!-- what are we doing -->
       <section class="section section-what">
         <div class="container">
           <h2 class="what-title">What are we doing</h2>
@@ -196,11 +172,7 @@
           </ul>
         </div>
       </section>
-      /**
-        |============================
-        | our team 
-        |============================
-      */
+      <!-- our team -->
       <section class="section team">
         <div class="container team-cont">
           <h2 class="our-title">Our Team</h2>
@@ -532,11 +504,7 @@
           </ul>
         </div>
       </section>
-      /**
-        |============================
-        | customers
-        |============================
-      */
+      <!-- customers -->
       <section class="section">
         <div class="container customers-cont">
           <h2 class="customers-title">Customers</h2>
@@ -575,11 +543,7 @@
         </div>
       </section>
     </main>
-    /**
-      |============================
-      | footer
-      |============================
-    */
+    <!-- footer -->
     <footer class="footer">
       <div class="container flex-footer">
         <div class="logo-footer">
@@ -659,11 +623,7 @@
         </form>
       </div>
     </footer>
-   /**
-     |============================
-     | modal form
-     |============================
-   */
+    <!-- modal form -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <div class="close-btn-thumb">
@@ -718,11 +678,7 @@
         </form>
       </div>
     </div>
-   /**
-     |============================
-     | mobile menu
-     |============================
-   */
+    <!-- mobile menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
         <svg width="8" height="8">
@@ -791,12 +747,8 @@
         ></li>
       </ul>
     </div>
-    /**
-      |============================
-      | script
-      |============================
-    */
-      <script
+    <!--script  -->
+    <script
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       defer
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
