adaptive page 2 portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                         ./images/portfolio-page2/portfolio-figma/img_mob@1x.webp 1x,
                         ./images/portfolio-page2/portfolio-figma/img_mob@2x.webp 2x
                       ">
-                    <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x.webp" alt="Banking App" width="360" heght="300" loading="lazy">
+                    <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x.webp" alt="Banking App" width="360" height="300" loading="lazy">
                   </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -88,7 +88,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img class="img" src="./images/portfolio-page2/cashless.jpg" alt="Cashless Payment" width="360" height="300" loading="lazy">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-9.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-9.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-7.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-7.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-1.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-1.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-1.webp" alt="Cashless Payment" width="360" height="300"  loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -103,7 +117,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/meditaion.jpg" alt="Meditaion App">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-6.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-6.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-6.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-6.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-2.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-2.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-2.webp" alt="Meditaion App"  width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -118,7 +146,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/taxi.jpg" alt="Taxi Service" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-5.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-5.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-5.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-5.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-3.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-3.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-3.webp" alt="Taxi Service" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -133,7 +175,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/screen.jpg" alt=">Screen Illustrations" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-4.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-4.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-4.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-4.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-4.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-4.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-4.webp" alt=">Screen Illustrations" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -148,7 +204,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/woman.jpg" alt="Woman" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-3.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-3.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-3.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-3.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-5.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-5.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-5.webp" alt="Woman" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -163,7 +233,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/stories.jpg" alt="Instagram Stories" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-2.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-2.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-2.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-2.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-6.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-6.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-6.webp" alt="Instagram Stories" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -178,7 +262,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/food.jpg" alt="Organic Food" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x-1.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x-1.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x-1.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x-1.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-7.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-7.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-7.webp" alt="Organic Food" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -193,7 +291,21 @@
             <li class="project prj-set-item">
               <a class="project-link link" href="#" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio-page2/coffee.jpg" alt="Fresh Coffee" width="360" height="300">
+                  <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_desk@1x.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_desk@2x.webp 2x
+                      ">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="
+                    ./images/portfolio-page2/portfolio-figma/img_tab@1x.webp 1x,
+                    ./images/portfolio-page2/portfolio-figma/img_tab@2x.webp 2x
+                  ">
+                    <source type="image/webp" media="(max-width: 767px)" srcset="
+                        ./images/portfolio-page2/portfolio-figma/img_mob@1x-8.webp 1x,
+                        ./images/portfolio-page2/portfolio-figma/img_mob@2x-8.webp 2x
+                      ">
+                  <img class="img" src="./images/portfolio-page2/portfolio-figma/img_mob@1x-8.webp" alt="Fresh Coffee" width="360" height="300" loading="lazy">
+                  </picture>
                   <p class="project-thumb-descr">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
